# math-toolkit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
config/: development.yaml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  solve.rs
crates/cli/tests/: cli.rs
crates/diff/: Cargo.toml
crates/diff/src/: main.rs
crates/diff/tests/: cli.rs
crates/integrator/: Cargo.toml
crates/integrator/src/: integrator.rs  lib.rs  plot.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/solver/: Cargo.toml
crates/solver/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: app.rs  main.rs
crates/web/src/controllers/: integrate.rs  mod.rs
crates/web/tests/: cli.rs
openspec/changes/archive/2026-04-30-equation-solver/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-30-equation-solver/specs/cli-solver/: spec.md
openspec/changes/archive/2026-04-30-extract-specs/: design.md  proposal.md  tasks.md
openspec/specs/cli-interface/: spec.md
openspec/specs/cli-solver/: spec.md
openspec/specs/development-practices/: spec.md
openspec/specs/equation-solver/: spec.md
openspec/specs/plotting/: spec.md
openspec/specs/symbolic-calculus/: spec.md
openspec/specs/web-api/: spec.md
openspec/specs/web-solver/: spec.md
src/cli/: index.js
src/math/: calculus.js  evaluator.js  mathInstance.js  solver.js
src/web/: server.js
src/web/public/: app.js  index.html  style.css
src/web/routes/: api.js
tests/: calculus.test.js  evaluator.test.js  solver.test.js
(+3 files in other folders)
