[package]
name = "rust-integrator-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web-server"
path = "src/main.rs"

[dependencies]
integrator-core = { path = "../integrator" }
solver-core = { path = "../solver" }
loco-rs = { version = "0.16.4", default-features = false, features = ["cli", "testing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"
